2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of raw camera image types
	(#8170). Thanks to Udi Fuchs <udifuchs@gmail.com>, Stanislav Brabec
	<sbrabec@suse.cz> and Frederic Crozat <fcrozat@mandriva.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add PKCS#10 certification request type
	(#10076). Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add "*.iso9660" glob for ISO 9660 files
	(#10130).  Thanks to Sebastian Dröge (slomo@circular-chaos.org).

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add PSF, miniPSF, PSFlib types, add
	gzippd PSF linux font type, properly subclass all gzipped types
	(#853). Thanks to Jo Valentine-Cooper <jvc@menagerie.tf>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add PAK archive type (#10030).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add TNEF message MIME type (#10077).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make application/x-shared-library-la a
	subclass of text/plain (#10203). Thanks to Yevgen Muntyan
	<muntyan@tamu.edu>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* update-mime-database.1: remove ROX from "See Also" manpage section
	(#10131). Thanks to Sebastian Dröge <slomo@circular-chaos.org>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix RealVideo document MIME type (#10122).
	Thanks to Frederic Crozat <fcrozat@mandriva.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add XPS MIME type (#10027).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>
