@@ -1,5 +1,11 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add matchlets for OpenOffice.org types
+	(#10100). Thanks to Pino Toscano <toscano.pino@tiscali.it> and Oliver
+	Braun <Oliver.Braun@sun.com>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add a bunch of raw camera image types
 	(#8170). Thanks to Udi Fuchs <udifuchs@gmail.com>, Stanislav Brabec
 	<sbrabec@suse.cz> and Frederic Crozat <fcrozat@mandriva.com>.
